fixed some spacing issues in the css code using diffchecker

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ header {
     box-shadow: 0 2px 2px #3a3a3a;
     display: flex;
     justify-content: space-between;
-    align-content: baseline;
+    align-items: baseline;
 }
 
 h1 {
@@ -51,7 +51,7 @@ header a {
     list-style-type: none;
 }
 
-#menu>li {
+#menu > li {
     margin-bottom: 1em;
 }
 
@@ -68,7 +68,7 @@ nav {
     left: 0;
     padding: 0 1rem;
     display: none;
-    top: 100%
+    top: 100%;
 }
 
 /* Nav toggle */
